node ui template

--- a/ui/templates/index.ejs
+++ b/ui/templates/index.ejs
@@ -24,7 +24,7 @@
     <label>title</label><br>
     <input type="text" id="title"><br>
     <label>content</label><br>
-    <textarea id="content"></textarea><br>
+    <textarea cols="25" rows="80" id="content"></textarea><br>
     <button id="submit">submit</button>
 
     <script type="text/javascript">
